2007-11-06  David Bateman  <dbateman@free.fr>

	* linear-algebra/__norm__.m: Scale frobenius norm by infinity norm
	to avoid issues of over- and underflow.  From Rolf Fabian
	<Rolf.Fabian@gmx.de>.

2007-11-02  Olli Saarela  <Olli.Saarela@kcl.fi>

	* time/asctime.m, general/structfun.m: Fix broken @examples in
	help texts.

2007-11-02  Kai Habel  <kai.habel@gmx.de>

	* plot/bar.m, plot/barh.m: Doc fix.

2007-10-31  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Call undo_string_escapes on obj.keylabel.

2007-10-31  Michael goffioul  <michael.goffioul@gmail.com>

	* plot/subplot.m: Ignore legend objects when parsing existing axes
	objects and legend objects are implemented with a separate axes
	object.

2007-10-30  David Bateman  <dbateman@free.fr>

	* control/base/DEMOcontrol.m: Doc fixes for small book format.

	* plot/__go_draw_axes__.m (do_linestyle_command):
	Use point type 0 for ".".

2007-10-26  John W. Eaton  <jwe@octave.org>

	* image/imshow.m: Improve compatibility.
	* image/image.m: Return handle if nargou > 0.

	* pkg/pkg.m: Delete PKG_ADD directive for autoloading packes.

2007-10-25  John W. Eaton  <jwe@octave.org>

	* miscellaneous/compare_versions.m: Style fixes.

2007-10-24  John W. Eaton  <jwe@octave.org>

	* image/saveimage.m: Use functional form of save instead of eval.
	Use -text instead of -ascii.

	* plot/__go_draw_axes__.m: Handle visible = "off" for axes objects.

2007-10-23  Peter A. Gustafson  <petegus@umich.edu>

	* plot/legend.m: Also extract location string from varargin (lost
	when 2007-10-08 patch was applied).

2007-10-23  David Bateman  <dbateman@free.fr>

	* plot/xlim.m, plot/ylim.m, plot/zlim.m, plot/__axes_limits__.m,
	miscellaneous/what.m: New functions
	* plot/Makefile.in, miscellaneous/Makefile.in (SOURCES): Add new
	functions.

2007-10-22  David Bateman  <dbateman@free.fr>

        * miscellaneous/cputime.m, time/tic.m, time/toc.m: Delete.
	* miscellaneous/Makefile.in (SOURCES): remove cputim.m