@@ -1,3 +1,7 @@
+2007-11-05  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* startup/inputrc: Delete key bindings starting with \340 code.
+
 2007-11-06  David Bateman  <dbateman@free.fr>
 
 	* linear-algebra/__norm__.m: Scale frobenius norm by infinity norm
